--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "alexa-app": "^2.3.4",
+    "alexa-verifier": "0.0.5",
     "body-parser": "~1.15.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "morgan": "~1.7.0"
+    "morgan": "~1.7.0",
+    "pug": "^2.0.0-beta4"
   }
 }
