--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "~1.15.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
     "pug": "^2.0.0-beta4"
   }
